--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "mihaildev/yii2-ckeditor": "*",
         "kartik-v/yii2-widget-fileinput": "@dev",
-        "metalguardian/yii2-fotorama-widget": "^1.0"
+        "metalguardian/yii2-fotorama-widget": "^1.0",
+        "mirocow/yii2-eav": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
