push DIZZZAIINgit add .111

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "kartik-v/yii2-widget-fileinput": "@dev",
         "kotchuprik/yii2-sortable-widgets": "*",
         "metalguardian/yii2-fotorama-widget": "^1.0",
-        "kartik-v/yii2-slider": "*"
+        "kartik-v/yii2-slider": "*",
+        "dmstr/yii2-adminlte-asset": "^2.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
