zip archive documents download refactor with ZipArchive

--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
         "kotchuprik/yii2-sortable-widgets": "*",
         "metalguardian/yii2-fotorama-widget": "^1.0",
         "kartik-v/yii2-slider": "*",
-        "dmstr/yii2-adminlte-asset": "^2.1",
-        "victor78/yii2-zipper": "~0.0.4"
+        "dmstr/yii2-adminlte-asset": "^2.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
